# shsl-editor

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  foo.gmo  mainwindow.cpp  mainwindow.h  mainwindow.ui  shsl-editor.pro  stand_12_00_ss.xml  subdirs.pro  wad.cpp  wad.h
blender-gmo-addon/: __init__.py
blender_gmo/: __init__.py
cli/: Cargo.toml
cli/src/: main.rs
decomp/: 0x57bd70.asm  0x57bd70.c  0x5814a0.c  hanron.c  interest.txt  lin_instruction_sizes.txt  opcode_behavior.md
docs/: gmo_internals.txt  script.md
dr2/: Cargo.toml
dr2/src/: formats.rs  game_data.rs  lib.rs  metadata.rs  project.rs  tests.rs
dr2/src/formats/: gmo.rs  lin.rs  pak.rs  tga.rs  wad.rs
dr2/src/formats/gmo/: file.rs  model.rs
dr2/src/formats/lin/: instructions.rs  script.pest  script_parser.rs  test.lin  test.script
dr2/src/game_data/: dialogue.rs  models.rs  music.rs  presents.rs  report_card.rs  scripts.rs  sprites.rs
dr2/src/game_data/models/: sprites.rs
editor/: CMakeLists.txt  checksums.json  helper.cpp  main.cpp  project.cpp  scriptsyntaxhighlighter.cpp  scriptsyntaxhighlighter.h  wad.h
editor/gui/: gamefilesview.cpp  gamefilesview.h  gamefilesview.ui  imagedetailview.ui  mainwindow.ui  scriptsview.cpp  scriptsview.h  scriptsview.ui
editor/models/: scripts.h  wadfiles.cpp
gui/: Cargo.toml
gui/src/: main.rs
shsl-editor/: CMakeLists.txt  error.h  helper.cpp  helper.h  imagedetailview.cpp  imagedetailview.h  imagedetailview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  shsl-editor.pro  wad.cpp  wad.h
shsl-editor/gui/: imagedetailview.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scriptsview.cpp  scriptsview.h  scriptsview.ui
shsl-editor/models/: scripts.cpp  scripts.h  wadfiles.cpp  wadfiles.h
shsl-editor/script/: script.cpp  script.h
shsl-library/: Cargo.toml  build.rs
shsl-library/src/: lib.rs
