[package]
name = "shsl-editor-cli"
version = "0.1.0"
authors = ["Delta-Psi <delta.psi00@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dr2 = { path = "../dr2" }
clap = "2.33.1"
pretty_env_logger = "0.4.0"
