[package]
name = "dr2"
version = "0.1.0"
authors = ["Delta-Psi <delta.psi00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
error-chain = "0.12.2"
tinytga = "0.3.2"
png = "0.16.7"
toml = "0.5.6"
mtpng = "0.3.4"
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4.11"
relative-path = { version = "1.3.2", features = ["serde"] }
