[package]
name = "dr2"
version = "0.1.0"
authors = ["Delta-Psi <delta.psi00@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
log = "0.4.11"
byteorder = "1.3.4"
tinytga = "0.3.2"
png = "0.16.7"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
relative-path = { version = "1.3.2", features = ["serde"] }
obj = "0.10.1"
hex = "0.4.2"
